# random-string-detector

./: .gitignore  LICENSE  README.md  baseline_test.py  pyproject.toml  test.py
.github/workflows/: coverage.yml  tests.yml
examples/: form_validation_example.py
notebooks/: portuguese.ipynb
random_string_detector/: __init__.py  detector.py  preprocessing.py  random_string_detector.py
random_string_detector/bigrams/: __init__.py  english.py  french.py  portuguese.py
src/random-string-detector/: bigrams.py  random_string_detector.py
