[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "random-string-detector"
version = "0.0.1"
authors = [
  { name="Mehmed Kadric", email="kadricze@gmail.com" },
]
description = "A package for random string detection"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mehmedkadric/random-string-detector"
"Bug Tracker" = "https://github.com/mehmedkadric/random-string-detector/issues"
